src/index.css
@import 'tippy.js/animations/shift-away-extreme.css';
@import 'tippy.js/dist/tippy.css';

body {
    font-family: Avenir, Helvetica, Arial, sans-serif;
    color: rgba(255, 255, 255, 0.6) !important;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    height: 100vh;
    padding: 0;

    background-color: #121212;
}

app {
    padding: 0 !important;
}

tr {
    border-bottom: 1px solid rgba(255, 255, 255, 0.12) !important;
}

.text-emphasis {
    color: rgba(255, 255, 255, 0.87) !important;
}

.text-disabled {
    color: rgba(255, 255, 255, 0.3);
}

.text-disabled:hover {
    color: #ff9800 !important;
}

input {
    color: rgba(255, 255, 255, 153);
}

#sidebar {
    position: fixed;
    top: 0;
    left: 0;
    min-height: 100vh;
    width: 250px;
    background-color: #121212;
}

#content {
    margin-left: 250px;
    margin-bottom: 0px;
    min-height: 100vh;
}

.card-p {
    margin-top: 10px !important;
}

.tippy-content p {
    margin: 0px;
}

.tippy-box {
    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
}

.category-label {
    margin: 5px;
    font-size: 15px;
}

a:link,
a:visited {
    color: rgba(255, 255, 255, 0.87) !important;
}

a:hover {
    color: #ff9800 !important;
}

